--- a/web/application/admin/view/tips/error.html
+++ b/web/application/admin/view/tips/error.html
@@ -32,7 +32,7 @@
         <!-- Main content -->
         <section class="content">
             <div class="error-page">
-                <h2 class="headline text-warning"> 404</h2>\
+                <h2 class="headline text-warning"> 404</h2><br /><br />
                 <div class="error-content">
                     <h3><i class="fa fa-warning text-warning"></i> Oops! Page not found.</h3>
                     <p></p>
