修改账期日期问题

--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -1,7 +1,7 @@
-{include file="layout/header" title="投诉与建议" keywords="开源WEB开发框架" /}
+{include file="layout/header" title="" keywords="" /}
 <link href="__STATIC__/js/plugins/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="__STATIC__/js/plugins/bootstrapvalidator/css/bootstrapValidator.css"/>
-{include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
+{include file="layout/left" groupId="$groupId" keywords="" /}
 
 <style type="text/css">
     .operator.fa {
@@ -157,6 +157,7 @@
                                         </p>
                                         <p>物料规格: {$order.buyer_remark}</p>
                                         <p>买家留言: {$order.buyer_comment}</p>
+                                        {if $order.delivery_time > 0} <p>交货日期: {:date('Y-m-d',$order.delivery_time)}</p>{/if}
                                     </div>
 
                                 </td>
@@ -166,10 +167,10 @@
                                 <td style="vertical-align: middle">{:getOrderState($order.state,1)}</td>
                                 <td style="vertical-align: middle">
                                     {if $order.state == 0} <!-- 待核价-->
-                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}"  data-date="{if $order.delivery_time > 0}{:date('Y-m-d',$order.delivery_time)}{/if}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 1}<!-- 待签约-->
-                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#sign-modal">签约</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" data-date="{if $order.delivery_time > 0}{:date('Y-m-d',$order.delivery_time)}{/if}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#sign-modal">签约</a>
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 2}<!-- 待采购商打款-->
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag ="1" data-toggle="modal" data-target="#remittance-modal" >收款</a>
@@ -246,7 +247,7 @@
                                 </div>
                                 <div class="form-group form-inline date_container">
                                     <label class="col-md-3">账期截止</label>
-                                    <input type="date" class="form-control" name="pay_date" placeholder="">
+                                    <input type="date" class="form-control" name="pay_date" min="" />
                                 </div>
                             </form>
                         </div>
@@ -281,7 +282,7 @@
                                 </div>
                                 <div class="form-group form-inline">
                                     <label class="col-md-3">账期截止</label>
-                                    <input type="date" class="form-control col-md-5" name="pay_date" placeholder="">
+                                    <input type="date" class="form-control col-md-5" name="pay_date" min="">
                                 </div>
                             </form>
                         </div>
@@ -443,8 +444,10 @@
     //核价
     $('#pricing-modal').on('show.bs.modal', function (event) {
         var id = $(event.relatedTarget).data('id');
+        var date = $(event.relatedTarget).data('date');
         $('.contract_type').trigger('change');
         $("#pricing-request").data('id',id);
+        $(this).find('input[name="pay_date"]').attr('min',date);
     });
     $('.contract_type').change(function () {
         var value = $(this).val();
@@ -502,7 +505,9 @@
     });
     $('#sign-modal').on('show.bs.modal', function (event) {
         var id = $(event.relatedTarget).data('id');
+        var date = $(event.relatedTarget).data('date');
         $("#sign-request").data('id',id);
+        $(this).find('input[name="pay_date"]').attr('min',date);
     });
     $("#sign-form").bootstrapValidator({
         excluded:[":disabled"],
