--- a/web/application/admin/view/type/index.html
+++ b/web/application/admin/view/type/index.html
@@ -1,6 +1,6 @@
-{include file="layout/header" title="投诉与建议" keywords="开源WEB开发框架" /}
+{include file="layout/header" title="" keywords="" /}
 
-{include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
+{include file="layout/left" groupId="$groupId" keywords="" /}
 
 <style type="text/css">
     .operator.fa {
@@ -100,7 +100,7 @@
     </div>
 </div>
 
-{include file="layout/footer" title="$title" keywords="开源WEB开发框架" /}
+{include file="layout/footer" title="$title" keywords="" /}
 <script type="text/javascript">
     var url = '{:url("admin/type/index")}';
     $('a[href="'+url+'"]').addClass('active');
