--- a/web/application/admin/view/member/index.html
+++ b/web/application/admin/view/member/index.html
@@ -73,7 +73,7 @@
                                 <td>{$member.username}<br />{$member.phone}<br/>{$member.real_name}<br />{$member.email}</td>
                                 <td>{:getMemberGroup($member.group)}</td>
                                 <td>{:date('Y-m-d H:i',$member.reg_time)}</td>
-                                <td>{$member.state == 1 ? '正常' : '被锁'}</td>
+                                <td>{$member.state == 1 ? '<span style="color:#28a745!important">正常</span>' : '<span style="color:#dc3545 !important">锁定</span>'}</td>
                                 <td>
                                     <a href="javascript:void(0)"  class="btn btn-sm btn-primary"  data-id="{$member.id}" data-username="{$member.username}" data-nickname="{$member.nickname}" data-toggle="modal"   data-target="#edit-modal">编辑</a>
                                 </td>
@@ -137,6 +137,16 @@
                                     <label for="" class="col-md-3">密码</label>
                                     <div class="col-md-9">
                                         <input type="text" class="form-control col-md-12"  maxlength="10" name="password" placeholder="" value="">
+                                    </div>
+                                </div>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">角色</label>
+                                    <div class="col-md-9">
+                                        <select name="role" class="form-control">
+                                            <option value="6">注册会员</option>
+                                            <option value="3">运营人员</option>
+                                            <option value="2">管理员</option>
+                                        </select>
                                     </div>
                                 </div>
                             </form>
