--- a/web/application/admin/view/goods/preview.html
+++ b/web/application/admin/view/goods/preview.html
@@ -68,6 +68,7 @@
             margin-right: 0.5rem;
             -webkit-box-flex: 1;
             -ms-flex: 1;
+            flex: 1;
             border-left: none;
         }
         .text-blue{
