修改订单逻辑

--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -162,7 +162,7 @@
 
                                 </td>
                                 <td style="vertical-align: middle">
-                                    应付: {$order.sum_money|floatval}元
+                                    应付: {$order.actual_money|floatval}元
                                 </td>
                                 <td style="vertical-align: middle">{:getOrderState($order.state,1)}</td>
                                 <td style="vertical-align: middle">
