后台修改密码修改手机号

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -146,25 +146,15 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/index.php?jzdc=index.edit_user" class="nav-link">
-                                <i class="fa fa-user nav-icon"></i>
-                                <p>编辑个人资料</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/index.php?jzdc=index.edit_phone&relaod=15" class="nav-link">
+                            <!-- <a href="/index.php?jzdc=index.edit_phone&relaod=15" class="nav-link"> -->
+                            <a href="{:url('user/editPhone')}" class="nav-link">
                                 <i class="fa fa-phone nav-icon"></i>
                                 <p>修改手机号</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/index.php?jzdc=index.edit_email" class="nav-link">
-                                <i class="fa fa-envelope-o nav-icon"></i>
-                                <p>修改邮箱</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/index.php?jzdc=index.edit_user&field=password&relaod=25" class="nav-link">
+                            <!-- <a href="/index.php?jzdc=index.edit_user&field=password&relaod=25" class="nav-link"> -->
+                            <a href="{:url('user/changePassword')}" class="nav-link">
                                 <i class="fa fa-key nav-icon"></i>
                                 <p>修改登录密码</p>
                             </a>
