--- a/web/application/admin/view/goods/preview.html
+++ b/web/application/admin/view/goods/preview.html
@@ -166,7 +166,7 @@
         商品详情
     </div>
     <div  class="goods-detail">
-        {:getImgUrl($goods.detail)}
+        {:getImgUrl($goods.m_detail)}
     </div>
 </div>
 </body>
