--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -119,9 +119,17 @@
                                 </div>
 
                                 <div class="form-inline form-group">
-                                    <label for="" class="col-md-2 pull-right">商品详情</label>
+                                    <label for="" class="col-md-2 pull-right">商品详情APP/H5</label>
                                     <div  class="col-md-7" style="padding-left: 0px">
-                                        <textarea id="goods-content" class="textarea" placeholder="商品详情..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;">{$row.detail}</textarea>
+                                        <textarea id="goods-content" class="textarea" placeholder="商品详情..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;">{$row.m_detail}</textarea>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label class="col-md-2">商品详情Web</label>
+                                    <div class="col-md-7 no-padding">
+                                        <div class="row">
+                                            <textarea id="web-goods-content" class="textarea goods-content" placeholder="商品详情..."  name="web_content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;">{$row.detail}</textarea>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -287,7 +295,13 @@
             uploadJson : '/?s=admin/file/upload2',
             allowFileManager : true,
             afterCreate : function() {
-                var self = this;
+            }
+        });
+        var editor2 = K.create('#web-goods-content', {
+            cssPath : '__STATIC__/js/plugins/kindeditor/plugins/code/prettify.css',
+            uploadJson : '/?s=admin/file/upload2',
+            allowFileManager : true,
+            afterCreate : function() {
             }
         });
     });
