移除商品添加多图验证

--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -286,8 +286,8 @@
     function validateSubmit() {
         $('#cover-upload-file').closest('.form-group').removeClass('has-error');
         $('#cover-upload-file').closest('.form-group').find('.help-block').html('');
-        $('#multi-upload-file').closest('.form-group').removeClass('has-error');
-        $('#multi-upload-file').closest('.form-group').find('.help-block').html('');
+        // $('#multi-upload-file').closest('.form-group').removeClass('has-error');
+        // $('#multi-upload-file').closest('.form-group').find('.help-block').html('');
 
       //  $("#add-form").data('bootstrapValidator').validate();
         var valid = true;
@@ -299,11 +299,11 @@
             valid = false;
         }
 
-        if ($('#multi-upload-file').val() == '') {
-            $('#multi-upload-file').closest('.form-group').addClass('has-error');
-            $('#multi-upload-file').closest('.form-group').find('.help-block').html('请上传多视角图片');
-            valid = false;
-        }
+        // if ($('#multi-upload-file').val() == '') {
+        //     $('#multi-upload-file').closest('.form-group').addClass('has-error');
+        //     $('#multi-upload-file').closest('.form-group').find('.help-block').html('请上传多视角图片');
+        //     valid = false;
+        // }
 
         var result = $("#add-form").data('bootstrapValidator').isValid();
         if (result && valid) {
