修改多图验证

--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -661,14 +661,14 @@
                         }
                     }
                 },
-                multi_path:{
-                    message: 'The cover_path is not valid',
-                    validators: {
-                        notEmpty: {
-                            message: '请上传多视角图片'
-                        }
-                    }
-                }
+                // multi_path:{
+                //     message: 'The cover_path is not valid',
+                //     validators: {
+                //         notEmpty: {
+                //             message: '请上传多视角图片'
+                //         }
+                //     }
+                // }
             }
         });
 
