--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -87,6 +87,12 @@
                                 <p>首页菜单</p>
                             </a>
                         </li>
+                         <li class="nav-item">
+                            <a href="{:url('admin/index/version')}" class="nav-link">
+                                <i class="fa fa-reorder nav-icon"></i>
+                                <p>版本发布</p>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 {/if}
