--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -92,7 +92,7 @@
                                 <td>{$goods.state == 2 ? '是' : '否'}</td>
                                 <td>{:getGoodsMallState($goods.mall_state,1)}</td>
                                 <td>
-                                    <a href="{:url('admin/goods/view','id='.$goods.id)}"  target="_blank" class="btn btn-sm btn-info"    >详情{$goods.mall_state}</a>
+                                    <a href="{:url('admin/goods/view','id='.$goods.id)}"  target="_blank" class="btn btn-sm btn-info">详情</a>
                                     {if $groupId == 2}
                                     <a href="javascript:void(0)"  class="btn btn-sm btn-secondary"  data-id="{$goods.id}" data-toggle="modal"   data-target="#check-modal">审核</a>
                                         
