--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -639,6 +639,7 @@
                 dataType: 'json',
                 success: function (data) {
                     if (data.status == 0) {
+                        alert("修改为逾期状态成功");
                         window.location.reload();
                     } else {
                         alert(data.msg);
@@ -880,7 +881,6 @@
                     success: function (data) {
                         if (data.status == 0) {
                             window.location.reload();
-                            alert("修改为逾期状态成功")
                         } else {
                             alert(data.msg);
                         }
