--- a/web/application/admin/view/index_menu/index.html
+++ b/web/application/admin/view/index_menu/index.html
@@ -238,7 +238,7 @@
                                 <div class="form-group form-inline">
                                     <label class="col-md-3 control-label">图片上传</label>
                                     <div class="col-md-8">
-                                        <input id="edit-file" name="edit_file" type="file" data-show-caption="true">
+                                        <input id="edit-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="edit_path" id="edit-upload-file"  value="" />
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2M</p>
                                     </div>
@@ -360,7 +360,7 @@
                         // maxImageHeight: '520px',
                         uploadExtraData: function(previewId, index) {   //额外参数的关键点
                             var obj = {};
-                            obj.type = 'banner';
+                            obj.type = 'type_index_icon';
                             return obj;
                         }
                     });
